--- a/Présentation.html
+++ b/Présentation.html
@@ -48,7 +48,7 @@
 				<br> <br> <br><br> 
 				<b>Benjamin Battisini</b> <br> <br> <br>
 				Développeur Web <br><br>
-				Joyeux et passioné des nouvelles technologies<br><br>
+				Joyeux et passionné des nouvelles technologies<br><br>
 				"Je vais me coucher ! Avant que l'un de vous ait une brillante idée pour nous faire tuer. Ou pire, nous faire expulser !"
 			</div>
 			<div class="leo">
