--- a/Présentation.html
+++ b/Présentation.html
@@ -42,7 +42,7 @@
 				<b>Théo Walch</b> <br> <br> <br>
 				Infographiste <br><br>
 				Créatif et apporte la bonne ambiance<br><br>
-				"Lunette sur le nez j'essaye de passer incognito"
+				"Lunettes sur le nez j'essaye de passer incognito"
 			</div>
 			<div class="benj">
 				<br> <br> <br><br> 
