--- a/Services.html
+++ b/Services.html
@@ -37,17 +37,17 @@
 			<img src='img/bandeO.png' width="200px" height="100%">
 			<div class="txt"> 
 			Envie d'un site web pour mettre en avant vos produits ou vos compétences ?<br>
-			Nous somme à votre disposition pour créer le site internet pour votre entreprise en adéquation avec votre demande.<br>
-			Nos services comprennent la mise en place d'un maquette, la réalisation du logo, le developpement du site et la rédaction.<br>
+			Nous sommes à votre disposition pour créer le site internet de entreprise en adéquation avec votre demande.<br>
+			Nos services comprennent la mise en place d'une maquette, la réalisation du logo, le développement du site et la rédaction.<br>
 			Nous proposons également l'hébergement et la maintenance.
 			<br> <br> <br> <br> <br>
-			Wabapado se met également à votre disposition pour toute demande de créations vidéo. <br>
+			Wabapado se met également à votre disposition pour toute demande de créations vidéos. <br>
 			Elles peuvent être dans le domaine sportif, présentation d'entreprise ou présentation de produit.<br>
-			Nos services vont de la prise vidéos jusqu'à son montage.
+			Nos services vont de la prise vidéo jusqu'à son montage.
 			<br> <br> <br> <br> <br>
 			Envie d'un nouveau logo ? de flyers ? d'animation 2D/3D ?<br>
 			Wabapado met ses compétences en infographie 2D/3D à votre service. <br>
-			Intéressé(e) par nos services ? N'hésitez pas à nous contacter en cliquant ici.<br> 
+			Intéressé(e) par nos services ? N'hésitez pas à nous contacter en cliquant sur contact.<br> 
 			</div>
 			
 			<img src='img/bandeO.png' width="200px" height="100%">
